--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap_minify.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome_minify.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line_minify.css">
 
 
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<!-- <script src="./js/jquery-2.1.0_minify.js"></script>
+	<script src="./js/bootstrap_minify.js"></script>
+	<script src="./js/blocs_minify.js" ></script>
+	<script src="./js/jquery.touchSwipe_minify.js" defer></script>
+	<script src="./js/gmaps_minify.js" defer></script> -->
+
+	<script src="./js/jquery-2.1.0_minify.js"></script>
+	<script src="./js/bootstrap_minify.js" defer></script>
+	<script src="./js/blocs_minify.js" defer></script>
+	<script src="./js/jquery.touchSwipe_minify.js" defer></script>
+	<script src="./js/gmaps_minify.js" defer ></script>
 
 	<title>La panthère web design</title>
 
@@ -42,7 +48,7 @@
 					<div class="navbar-header">
 
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="Ly web design logo agence web meilleure agence" height="40" /></a>
+								alt="Lyon web design logo agence web meilleure agence" height="40" /></a>
 
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
@@ -135,7 +141,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="row voffset-lg voffset">
+					<div class="row voffset-lg voffset flex">
 						<h3 class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 							"L'agence La panthère est une excellente agence web!les webdesigners ont réussi à capturer
 							l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos
@@ -144,7 +150,7 @@
 						</h3>
 			
 			
-						<p>Maxime Guibard, PDG de A vos fourchettes</p>
+						<p class="autor">Maxime Guibard, PDG de A vos fourchettes</p>
 			
 					</div>
 				</div>
@@ -192,9 +198,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-									src="img/1.webp"
+									src="img/1.jpg"
 									alt="paris web design logo agence web meilleure agence et refonte site web journal"
 									class="img-responsive portfolio-thumb" /></a>
 							<h5 class="mg-md text-center">
@@ -205,9 +211,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-									src="img/2.webp" class="img-responsive portfolio-thumb"
+									src="img/2.jpg" class="img-responsive portfolio-thumb"
 									alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 							<h5 class="mg-md text-center">
 								Création d'un site web pour photographes
@@ -219,9 +225,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 								data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-									src="img/3.webp" class="img-responsive portfolio-thumb"
+									src="img/3.jpg" class="img-responsive portfolio-thumb"
 									alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 							<h5 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
@@ -232,9 +238,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-									src="img/4.webp" class="img-responsive portfolio-thumb"
+									src="img/4.jpg" class="img-responsive portfolio-thumb"
 									alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 							<h5 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
