--- a/index.html
+++ b/index.html
@@ -5,27 +5,23 @@
 	<meta charset="utf-8">
 	<meta name="robots" content="index">
 	<meta name="description"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+		content="Nous sommes une entreprise de webdesign sur Lyon. Nous vous accompagnons dans vos projets de création ou d'adaptation du webdsign de votre société.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap_minify.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome_minify.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line_minify.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
 
-	<!-- <script src="./js/jquery-2.1.0_minify.js"></script>
-	<script src="./js/bootstrap_minify.js"></script>
-	<script src="./js/blocs_minify.js" ></script>
-	<script src="./js/jquery.touchSwipe_minify.js" defer></script>
-	<script src="./js/gmaps_minify.js" defer></script> -->
 
-	<script src="./js/jquery-2.1.0_minify.js"></script>
-	<script src="./js/bootstrap_minify.js" defer></script>
-	<script src="./js/blocs_minify.js" defer></script>
-	<script src="./js/jquery.touchSwipe_minify.js" defer></script>
-	<script src="./js/gmaps_minify.js" defer ></script>
+
+	<script src="./js/jquery-2.1.0.min.js" defer></script>
+	<script src="./js/bootstrap.min.js" defer></script>
+	<script src="./js/blocs.min.js" defer></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
+	<!-- <script src="./js/gmaps_minify.js" defer></script> -->
 
 	<title>La panthère web design</title>
 
@@ -61,10 +57,9 @@
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
+
 							<li>
-							</li>
-							<li>
-								<a href="page2.html">contact &gt;</a>
+								<a href="contact.html">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -79,13 +74,17 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12 optim">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-								alt="Agence La Panthère, agence web paris, création logo paris" />
+							<!-- <img src="img/logo.png" class="center-block image-resize-mode" width="100"
+								alt="Agence La Panthère, agence web paris, création logo paris" /> -->
+
+
+							<img src="img/logo_redim.png" class="center-block image-resize-mode" width="100"
+								alt="Logo de l'Agence La Panthère web-design Lyon" />
 							<h1 class="text-center hero-bloc-text tc-white ">
-								Agence La Panthère
+								Agence La Panthère web design
 							</h1>
 							<div class="text-center">
-								<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 									id="cta-hero">Contact</a>
 							</div>
 						</div>
@@ -93,13 +92,14 @@
 				</div>
 			</div>
 			<!-- bloc-1-presentation END -->
-			
+
 			<!-- bloc-2-services -->
 			<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="container bloc-md">
 					<div class="row">
 						<h2 class="col-sm-12 text-center">
-							L'agence La Panthère est une agence de design qui aide les entreprises à devenir attractives et
+							L'agence La Panthère est une agence de design qui aide les entreprises à devenir attractives
+							et
 							visibles sur Internet.
 						</h2>
 					</div>
@@ -112,7 +112,8 @@
 								Web design
 							</h3>
 							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
+								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez
+								de
 								zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
@@ -124,7 +125,8 @@
 								&nbsp;Stratégie
 							</h3>
 							<p class="text-center ">
-								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
+								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour
+								comprendre
 								vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 							</p>
 						</div>
@@ -141,22 +143,22 @@
 							</p>
 						</div>
 					</div>
-					<div class="row voffset-lg voffset flex">
+					<div class="row voffset-lg voffset flex2">
 						<h3 class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 							"L'agence La panthère est une excellente agence web!les webdesigners ont réussi à capturer
 							l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos
 							ventes en ligne à Lyon."
-			
+
 						</h3>
-			
-			
+
+
 						<p class="autor">Maxime Guibard, PDG de A vos fourchettes</p>
-			
+
 					</div>
 				</div>
 			</div>
 		</section>
-		
+
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
@@ -167,17 +169,23 @@
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12">
 							<h4 class="mg-md text-center tc-white">
-								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
-								le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
+								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à
+								connaître
+								le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux
+								clients
 								.<br>
 							</h4>
 							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
-								aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
-								ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
-								nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-								qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
-									href="page2.html">Contactez notre équipe</a><br>
+								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale,
+								qu’elles
+								aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que
+								vous
+								ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez
+								pas à
+								nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien
+								structurés,
+								qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
+									class="white bold-link" href="contact.html">Contactez notre équipe</a><br>
 							</p>
 						</div>
 					</div>
@@ -186,13 +194,13 @@
 			<!-- bloc-3-what-i-do END -->
 
 		</section>
-		
+
 		<!-- bloc-4-portfolio -->
 		<section>
 			<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 				<div class="container bloc-lg">
 					<div class="row">
-						<h4>
+						<h4 class="text-center m-2">
 							Nous travaillons avec beaucoup de clients, voici nos réalisations.
 						</h4>
 					</div>
@@ -201,7 +209,7 @@
 							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 									src="img/1.jpg"
-									alt="paris web design logo agence web meilleure agence et refonte site web journal"
+									alt="Photo de livres ouverts posés les uns sur les autres."
 									class="img-responsive portfolio-thumb" /></a>
 							<h5 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
@@ -214,7 +222,7 @@
 							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 									src="img/2.jpg" class="img-responsive portfolio-thumb"
-									alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+									alt="photo d'une photographe en action" /></a>
 							<h5 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h5>
@@ -226,9 +234,9 @@
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
-								data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-									src="img/3.jpg" class="img-responsive portfolio-thumb"
-									alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								data-caption="Création d'un site internet pour un voyageur"
+								data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb"
+									alt="Photo du matériel de photographe pour la création d'un site internet" /></a>
 							<h5 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h5>
@@ -239,9 +247,9 @@
 						</div>
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
-								data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-									src="img/4.jpg" class="img-responsive portfolio-thumb"
-									alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								data-caption="Conception d'un site pour une agence de mariage"
+								data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb"
+									alt="Photo d'un environnement de travail de développeur web" /></a>
 							<h5 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h5>
@@ -255,23 +263,24 @@
 			</div>
 			<!-- bloc-4-portfolio END -->
 		</section>
-		
+
 
 		<!-- bloc-5-cta -->
 		<section>
-					<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-						<div class="container bloc-lg">
-							<div class="row">
-								<h5 class="mg-md text-center tc-white">
-									Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-								</h5>
-								<div class="col-sm-12 text-center">
-									<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
-								</div>
-							</div>
+			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+				<div class="container bloc-lg">
+					<div class="row">
+						<h5 class="mg-md text-center tc-white">
+							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+						</h5>
+						<div class="col-sm-12 text-center">
+							<a href="contact.html"
+								class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
 					</div>
-					<!-- bloc-5-cta END -->
+				</div>
+			</div>
+			<!-- bloc-5-cta END -->
 		</section>
 
 
@@ -283,26 +292,31 @@
 						<p class="text-center white">
 							Agence La Panthère - Agence web basée à Lyon.<br>
 						</p>
-						<div class="row row-no-gutters social">
+						<div class="row row-no-gutters social flex">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com/?lang=fr">
+
+
+
+
+										<span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://fr-fr.facebook.com/"><span
+											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 
@@ -315,7 +329,7 @@
 
 		</footer>
 		<!-- Principal conteneur END -->
-
+	</div>
 
 </body>
 
