--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,9 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
+							<a class="navbar-brand" aria-label="Accès à l'accueil" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
 									alt="atlanta web design logo" height="40" /></a>
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" aria-label="afficher le menu"
 								data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 									class="icon-bar"></span><span class="icon-bar"></span>
@@ -48,10 +48,10 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a href="index.html">Accueil</a>
+									<a href="index.html" aria-label="Accès à l'accueil">Accueil</a>
 								</li>
 								<li>
-									<a href="contact.html">Contact</a>
+									<a href="contact.html" aria-label="accès aux contact">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -118,7 +118,7 @@
 										</label><textarea id="message" class="form-control" rows="4" cols="50"
 											required></textarea>
 									</div>
-									<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
+									<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" aria-label="Envoyer"
 										type="submit">
 										Envoyer
 									</button>
@@ -138,8 +138,8 @@
 
 		<footer>
 			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
-					class="fa fa-chevron-up"></span></a>
+			<button  aria-label="retour en haut de page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+					class="fa fa-chevron-up"></span></button>
 			<!-- ScrollToTop Button END -->
 
 
@@ -163,25 +163,25 @@
 							<div class="row row-no-gutters social flex">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span
+										<a class="social" href="#" aria-label="accès à twitter"><span
 												class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span
+										<a class="social" href="#" aria-label="accès à facebook"><span
 												class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span
+										<a class="social" href="#" aria-label="accès à dribbble"><span
 												class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span
+										<a class="social" href="#" aria-label="Accès à instagram"><span
 												class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
