--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		content="Nous sommes une entreprise de webdesign sur Lyon. Nous vous accompagnons dans vos projets de création ou d'adaptation du webdsign de votre société.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-
+	
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-
+	
 
 
 
@@ -43,10 +43,10 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
+						<a class="navbar-brand" href="index.html" aria-label="Accès à la page d'accueil"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy"
 								alt="Lyon web design logo agence web meilleure agence" height="40" /></a>
 
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+						<button id="nav-toggle" type="button" aria-label="Afficher le menu" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 								class="icon-bar"></span><span class="icon-bar"></span>
@@ -55,11 +55,11 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html">Accueil</a>
+								<a href="index.html" aria-label="Accès à la page d'accueil">Accueil</a>
 							</li>
 
 							<li>
-								<a href="contact.html">Contact</a>
+								<a href="contact.html" aria-label="Accès à la page contact">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -78,13 +78,13 @@
 								alt="Agence La Panthère, agence web paris, création logo paris" /> -->
 
 
-							<img src="img/logo_redim.png" class="center-block image-resize-mode" width="100"
+							<img src="img/logo_redim.png" class="center-block image-resize-mode" width="100" loading="lazy"
 								alt="Logo de l'Agence La Panthère web-design Lyon" />
 							<h1 class="text-center hero-bloc-text tc-white ">
 								Agence La Panthère web design
 							</h1>
 							<div class="text-center">
-								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+								<a href="contact.html" aria-label="accès à la page contact" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 									id="cta-hero">Contact</a>
 							</div>
 						</div>
@@ -185,7 +185,7 @@
 								nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien
 								structurés,
 								qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-									class="white bold-link" href="contact.html">Contactez notre équipe</a><br>
+									class="white bold-link" href="contact.html" aria-label="Accès à la page contact">Contactez notre équipe</a><br>
 							</p>
 						</div>
 					</div>
@@ -206,9 +206,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/1.jpg" aria-label="Afficher l'image 1" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-									src="img/1.jpg"
+									src="img/1.jpg" loading="lazy"
 									alt="Photo de livres ouverts posés les uns sur les autres."
 									class="img-responsive portfolio-thumb" /></a>
 							<h5 class="mg-md text-center">
@@ -219,9 +219,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/2.jpg" aria-label="Afficher l'image 2" data-gallery-id="gallery-1"
 								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-									src="img/2.jpg" class="img-responsive portfolio-thumb"
+									src="img/2.jpg" class="img-responsive portfolio-thumb" loading="lazy"
 									alt="photo d'une photographe en action" /></a>
 							<h5 class="mg-md text-center">
 								Création d'un site web pour photographes
@@ -233,9 +233,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/3.jpg" aria-label="Afficher l'image 3" data-gallery-id="gallery-1"
 								data-caption="Création d'un site internet pour un voyageur"
-								data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb"
+								data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" loading="lazy"
 									alt="Photo du matériel de photographe pour la création d'un site internet" /></a>
 							<h5 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
@@ -246,9 +246,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/4.jpg" aria-label="Afficher l'image 4" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage"
-								data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb"
+								data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" loading="lazy"
 									alt="Photo d'un environnement de travail de développeur web" /></a>
 							<h5 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
@@ -274,7 +274,7 @@
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h5>
 						<div class="col-sm-12 text-center">
-							<a href="contact.html"
+							<a href="contact.html" aria-label="Accès à la page contact"
 								class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
 					</div>
@@ -295,7 +295,7 @@
 						<div class="row row-no-gutters social flex">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com/?lang=fr">
+									<a class="social" href="#" aria-label="Accès à twitter">
 
 
 
@@ -305,18 +305,18 @@
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://fr-fr.facebook.com/"><span
+									<a class="social" href="#" aria-label="Accès à facebook"><span
 											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="#" aria-label="Accès à dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="#" aria-label="Accès à Instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 
